[refactor] Used Tocea Scertify to address ~16 days of technical debt semi-automatically
svn path=/trunk/eXist/; revision=18259